using Activity Result API

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,8 @@
             android:id="@+id/hero_image"
             android:layout_width="120dp"
             android:layout_height="120dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             tools:src="@android:drawable/ic_menu_camera" />
 
         <EditText
